# SUPERMag-Simulation-Suite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _test_fitting.py  architecture.md  nb_cuni_buzdin_figure_9.csv  pyproject.toml
.github/workflows/: ci.yml  validation.yml  wheels.yml
benchmarks/: bench_proximity.cpp  bench_runner.py  bench_tridiag.cpp
config/: compiler_flags.mk  detect_platform.mk  linux_x86_64.mk  windows_x86_64.mk
cpp/include/supermag/: bdg.h  constants.h  depairing.h  eilenberger.h  error.h  ginzburg_landau.h  interface.h  josephson.h  optimizer.h  proximity.h  solver_options.h  triplet.h  usadel.h
cpp/src/common/: allocator.cpp  constants.cpp  digamma.cpp  digamma.h  error.cpp  solver_options.cpp
cpp/src/linalg/: eigen.cpp  simd_kernels.cpp  tridiag.cpp
cpp/src/proximity/: critical_temp.cpp  depairing.cpp  depairing_models.cpp  interface.cpp  kernel_domains.cpp  kernel_graded.cpp  kernel_snf.cpp  kernels.cpp  optimizer.cpp  pair_amplitude.cpp  spin_active.cpp  transfer_matrix.cpp  transfer_matrix.h
cpp/src/solvers/: bdg.cpp  determinant.cpp  eilenberger.cpp  ginzburg_landau.cpp  josephson.cpp  root_scalar.cpp  root_scalar.h  triplet.cpp  usadel.cpp
cpp/test/: test_bdg.cpp  test_depairing_models.cpp  test_determinant.cpp  test_digamma.cpp  test_eilenberger.cpp  test_ginzburg_landau.cpp  test_josephson.cpp  test_kernel_domains.cpp  test_kernel_graded.cpp  test_kernel_snf.cpp  test_optimizer.cpp  test_proximity.cpp  test_root_scalar.cpp  test_stubs.cpp  test_transfer_matrix.cpp  test_tridiag.cpp  test_triplet.cpp  test_usadel.cpp
docs/api/: bdg.md  depairing.md  eilenberger.md  ginzburg_landau.md  index.md  josephson.md  materials.md  plotting.md  proximity.md  sweeps.md  themes.md  triplet.md  usadel.md
docs/internal/: architecture.md
docs/theory/: bdg_discretization.ipynb  bdg_discretization.md  eilenberger.ipynb  ginzburg_landau.ipynb  ginzburg_landau.md  josephson_cpr.ipynb  josephson_cpr.md  proximity_effect.ipynb  proximity_effect.md  triplet_correlations.ipynb  triplet_correlations.md  usadel_equations.ipynb  usadel_equations.md
docs/tutorials/: 01_quickstart.ipynb  01_quickstart.md  02_parameter_sweep.ipynb  02_parameter_sweep.md  03_custom_materials.ipynb  03_custom_materials.md  04_tc_sweeps.ipynb  05_depairing.ipynb  06_fitting.ipynb  07_explorer.ipynb  08_design_optimizer.ipynb  09_supercurrent_diode.ipynb  10_pi_junction.ipynb  11_triplet_correlations.ipynb
ocaml/: dune-project
ocaml/lib/ffi/: dune  solvers.ml  stubs.ml  stubs.mli
ocaml/lib/pipeline/: chain.ml  design.ml  device.ml  dune  optimize.ml  pipeline.mli  sweep.ml
ocaml/lib/types/: dune  geometry.ml  material.ml  params.ml  result.ml  types.mli
ocaml/test/: dune  test_chain.ml  test_design.ml  test_device.ml  test_ffi.ml  test_optimize.ml  test_sweep.ml
python/: CMakeLists.txt  pyproject.toml
python/supermag/: __init__.py  _binding.cpp  bdg.py  depairing.py  eilenberger.py  ginzburg_landau.py  josephson.py  materials.py  optimizer.py  plotting.py  proximity.py  sweeps.py  triplet.py  usadel.py
python/supermag/themes/: __init__.py  dark.py  draft.py  presentation.py  publication.py
python/tests/: conftest.py  test_depairing.py  test_materials.py  test_plotting.py  test_proximity.py  test_solvers.py  test_sweeps.py  test_themes.py
validation/: run_validation.py
validation/bergeret_2005/: README.md  params.json
validation/bergeret_2005/expected/: triplet_amplitude.csv
validation/buzdin_1982/: README.md  params.json
validation/buzdin_1982/expected/: pair_amplitude.csv  tc_vs_df.csv
validation/radovic_1991/: README.md  params.json
validation/radovic_1991/expected/: tc_vs_df.csv
validation/ryazanov_2003/: README.md  params.json
validation/ryazanov_2003/expected/: tc_vs_df.csv
