[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11", "cmake>=3.15"]
build-backend = "scikit_build_core.build"

[project]
name = "supermag"
version = "0.2.0"
description = "Computational toolkit for superconductor/ferromagnet heterostructure research"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "SUPERMag Lab, Texas State University"},
]
keywords = [
    "superconductor",
    "ferromagnet",
    "proximity-effect",
    "thin-film",
    "condensed-matter",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.22",
    "matplotlib>=3.5",
    "scipy>=1.8",
]

[project.urls]
Homepage = "https://github.com/seanstarks-hub/SUPERMag-Simulation-Suite"
Repository = "https://github.com/seanstarks-hub/SUPERMag-Simulation-Suite"
Issues = "https://github.com/seanstarks-hub/SUPERMag-Simulation-Suite/issues"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.source-dir = "python"
wheel.packages = ["python/supermag"]
