[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "supermag"
version = "0.1.0"
description = "Computational toolkit for superconductor/ferromagnet heterostructure research"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "SUPERMag Lab, Texas State University"},
]
dependencies = [
    "numpy>=1.22",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.scikit-build]
cmake.build-type = "Release"
